--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
 
 <body>
     <nav class="navbar">
-        <a href=""><img src="/assets/logo.png" alt="logo"></a>
+        <a href=""><img src="assets/logo.png" alt="logo"></a>
         <div class="nav-menu">
             <a href="#">Home</a>
             <a href="#about">About</a>
@@ -43,7 +43,7 @@
                     Indonesia dan ia sendiri yang menamainya.</p>
             </div>
         </div>
-        <img src="/assets/ir.soekarno.png" alt="hero">
+        <img src="assets/ir.soekarno.png" alt="hero">
     </section>
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path fill="#ADADAD" fill-opacity="1"
